<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/friends_list_title"
        android:layout_gravity="center_horizontal|top"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/friend_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name2"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginTop="79dp"
        android:textStyle="normal"
        android:layout_below="@+id/friends_list_title"
        android:layout_alignLeft="@+id/friend_Email"
        android:layout_alignStart="@+id/friend_Email" />

    <TextView
        android:id="@+id/friend_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="normal"
        android:layout_below="@+id/friend_name"
        android:layout_alignRight="@+id/friend_sales"
        android:layout_alignEnd="@+id/friend_sales" />

    <TextView
        android:id="@+id/friend_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rating"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="normal"
        android:layout_below="@+id/friend_Email"
        android:layout_alignLeft="@+id/friend_Email"
        android:layout_alignStart="@+id/friend_Email" />

    <TextView
        android:id="@+id/friend_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="normal"
        android:layout_below="@+id/friend_rate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
