<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             style="@style/AppTheme"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="edu.gatech.cs2340.willcode4money.shoppingwithfriends.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name_excite"
        android:id="@+id/welcome_title"
        android:layout_gravity="center_horizontal|top"
        android:textSize="70sp"
        android:textStyle="bold|italic"
        android:textColor="#000000"/>

    <TextView
	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/team"
        android:id="@+id/welcome_team"
        android:layout_gravity="center|bottom"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        android:textColor="#000000"
        android:layout_marginBottom="50dp"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:layout_gravity="end|bottom"
        android:onClick="buttonPressed"
        android:textColor="#000000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:id="@+id/sign_in"
        android:layout_gravity="start|bottom"
        android:onClick="buttonPressed"
        android:textColor="#000000"/>

</FrameLayout>
