<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="edu.gatech.cs2340.willcode4money.shoppingwithfriends.ChangePass">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button11"
        android:layout_alignEnd="@+id/button11"
        android:layout_alignLeft="@+id/change_pass_new"
        android:layout_alignStart="@+id/change_pass_new"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_change_pass"
        android:id="@+id/button11"
        android:onClick="savePass"
        android:layout_below="@+id/change_pass_new_conf"
        android:layout_alignRight="@+id/change_pass_new_conf"
        android:layout_alignEnd="@+id/change_pass_new_conf"
        android:layout_alignLeft="@+id/change_pass_new_conf"
        android:layout_alignStart="@+id/change_pass_new_conf"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/change_pass_new"
        android:hint="@string/prompt_password"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/button11"
        android:layout_alignEnd="@+id/button11"
        android:layout_alignLeft="@+id/button11"
        android:layout_alignStart="@+id/button11"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/change_pass_new_conf"
        android:hint="@string/prompt_password_confirm"
        android:layout_below="@+id/change_pass_new"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/new_pass_message"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
